--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div  class="divider-custom divider-light">
             <a href="https://www.instagram.com/aventurasportsclub/?igsh=MWptcXZjbmRjdjZ5MQ%3D%3D"><img class="img-fluid" src="assets/img/portfolio/instagram.png" alt="..." /></a>
             <a href="https://astroglobalcorp.com/"><img class="img-fluid" src="assets/img/portfolio/web.png" alt="..." /></a>
-        </div>></div>  
+        </div></div>  
             
         </section>
     
