--- a/index.html
+++ b/index.html
@@ -81,6 +81,86 @@
         </div>
         <div class="divider-custom divider-light">
             <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/bebidas/1.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/bebidas/2.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/bebidas/3.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/bebidas/4.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/bebidas/5.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/bebidas/6.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/bebidas/7.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/bebidas/8.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/bebidas/9.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/bebidas/10.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/bebidas/11.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/bebidas/12.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/bebidas/13.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/bebidas/14.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/bebidas/15.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/bebidas/16.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
             <img class="img-fluid" src="assets/img/portfolio/12.jpg" alt="..." />
             <div class="divider-custom-line"></div>
         </div>
