carga 9 de julio

--- a/index.html
+++ b/index.html
@@ -81,87 +81,7 @@
         </div>
         <div class="divider-custom divider-light">
             <div class="divider-custom-line"></div>
-            <img class="img-fluid" src="assets/img/bebidas/1.jpg" alt="..." />
-            <div class="divider-custom-line"></div>
-        </div>
-        <div class="divider-custom divider-light">
-            <div class="divider-custom-line"></div>
-            <img class="img-fluid" src="assets/img/bebidas/2.jpg" alt="..." />
-            <div class="divider-custom-line"></div>
-        </div>
-        <div class="divider-custom divider-light">
-            <div class="divider-custom-line"></div>
-            <img class="img-fluid" src="assets/img/bebidas/3.jpg" alt="..." />
-            <div class="divider-custom-line"></div>
-        </div>
-        <div class="divider-custom divider-light">
-            <div class="divider-custom-line"></div>
-            <img class="img-fluid" src="assets/img/bebidas/4.jpg" alt="..." />
-            <div class="divider-custom-line"></div>
-        </div>
-        <div class="divider-custom divider-light">
-            <div class="divider-custom-line"></div>
-            <img class="img-fluid" src="assets/img/bebidas/5.jpg" alt="..." />
-            <div class="divider-custom-line"></div>
-        </div>
-        <div class="divider-custom divider-light">
-            <div class="divider-custom-line"></div>
-            <img class="img-fluid" src="assets/img/bebidas/6.jpg" alt="..." />
-            <div class="divider-custom-line"></div>
-        </div>
-        <div class="divider-custom divider-light">
-            <div class="divider-custom-line"></div>
-            <img class="img-fluid" src="assets/img/bebidas/7.jpg" alt="..." />
-            <div class="divider-custom-line"></div>
-        </div>
-        <div class="divider-custom divider-light">
-            <div class="divider-custom-line"></div>
-            <img class="img-fluid" src="assets/img/bebidas/8.jpg" alt="..." />
-            <div class="divider-custom-line"></div>
-        </div>
-        <div class="divider-custom divider-light">
-            <div class="divider-custom-line"></div>
-            <img class="img-fluid" src="assets/img/bebidas/9.jpg" alt="..." />
-            <div class="divider-custom-line"></div>
-        </div>
-        <div class="divider-custom divider-light">
-            <div class="divider-custom-line"></div>
-            <img class="img-fluid" src="assets/img/bebidas/10.jpg" alt="..." />
-            <div class="divider-custom-line"></div>
-        </div>
-        <div class="divider-custom divider-light">
-            <div class="divider-custom-line"></div>
-            <img class="img-fluid" src="assets/img/bebidas/11.jpg" alt="..." />
-            <div class="divider-custom-line"></div>
-        </div>
-        <div class="divider-custom divider-light">
-            <div class="divider-custom-line"></div>
-            <img class="img-fluid" src="assets/img/bebidas/12.jpg" alt="..." />
-            <div class="divider-custom-line"></div>
-        </div>
-        <div class="divider-custom divider-light">
-            <div class="divider-custom-line"></div>
-            <img class="img-fluid" src="assets/img/bebidas/13.jpg" alt="..." />
-            <div class="divider-custom-line"></div>
-        </div>
-        <div class="divider-custom divider-light">
-            <div class="divider-custom-line"></div>
-            <img class="img-fluid" src="assets/img/bebidas/14.jpg" alt="..." />
-            <div class="divider-custom-line"></div>
-        </div>
-        <div class="divider-custom divider-light">
-            <div class="divider-custom-line"></div>
-            <img class="img-fluid" src="assets/img/bebidas/15.jpg" alt="..." />
-            <div class="divider-custom-line"></div>
-        </div>
-        <div class="divider-custom divider-light">
-            <div class="divider-custom-line"></div>
-            <img class="img-fluid" src="assets/img/bebidas/16.jpg" alt="..." />
-            <div class="divider-custom-line"></div>
-        </div>
-        <div class="divider-custom divider-light">
-            <div class="divider-custom-line"></div>
-            <img class="img-fluid" src="assets/img/portfolio/12.jpg" alt="..." />
+            <img class="img-fluid" src="aassets/img/portfolio/12.jpg" alt="..." />
             <div class="divider-custom-line"></div>
         </div>
         <div class="divider-custom divider-light">
@@ -174,6 +94,82 @@
             <img class="img-fluid" src="assets/img/portfolio/14.jpg" alt="..." />
             <div class="divider-custom-line"></div>
         </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/portfolio/15.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/portfolio/16.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/portfolio/17.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/portfolio/18.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/portfolio/19.jpgalt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/portfolio/20.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/portfolio/21.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/portfolio/22.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/portfolio/23.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/portfolio/24.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/portfolio/25.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/bebidas/26.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/portfolio/27.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/portfolio/28.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="divider-custom divider-light">
+            <div class="divider-custom-line"></div>
+            <img class="img-fluid" src="assets/img/portfolio/29.jpg" alt="..." />
+            <div class="divider-custom-line"></div>
+        </div>
+      
 
 
         <!-- Conmact Section-->
